fix: remove role related properties
